@@ -306,11 +306,10 @@ static void qdm2_extradata_free(PayloadContext *qdm)
 }
 
 RTPDynamicProtocolHandler ff_qdm2_dynamic_handler = {
-    "X-QDM",
-    AVMEDIA_TYPE_AUDIO,
-    CODEC_ID_NONE,
-    NULL,
-    qdm2_extradata_new,
-    qdm2_extradata_free,
-    qdm2_parse_packet,
+    .enc_name         = "X-QDM",
+    .codec_type       = AVMEDIA_TYPE_AUDIO,
+    .codec_id         = CODEC_ID_NONE,
+    .open             = qdm2_extradata_new,
+    .close            = qdm2_extradata_free,
+    .parse_packet     = qdm2_parse_packet,
 };
